[gd_scene load_steps=3 format=3 uid="uid://cgshkgi5sfd58"]

[ext_resource type="Script" uid="uid://3laxytqg0cr4" path="res://scripts/main_menu.gd" id="1_dmvif"]
[ext_resource type="Texture2D" uid="uid://dvpd21gicv33h" path="res://images/title.svg" id="2_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmvif")

[node name="MainScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="TextureRect" parent="MainScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -336.0
offset_top = 45.0
offset_right = -168.0
offset_bottom = 85.0
grow_horizontal = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
texture = ExtResource("2_ekxnf")

[node name="Buttons" type="VBoxContainer" parent="MainScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -50.5
offset_right = 46.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Puzzles" type="Button" parent="MainScreen/Buttons"]
layout_mode = 2
disabled = true
text = "Puzzles
"

[node name="Free Play" type="Button" parent="MainScreen/Buttons"]
layout_mode = 2
text = "Free Play"

[node name="Options" type="Button" parent="MainScreen/Buttons"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MainScreen/Buttons"]
layout_mode = 2
text = "Quit"

[node name="OptionsScreen" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.5
anchor_top = 0.5
anchor_right = 1.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="OptionsScreen"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="MainScreen/Buttons/Puzzles" to="." method="_on_puzzles_pressed"]
[connection signal="pressed" from="MainScreen/Buttons/Free Play" to="." method="_on_free_play_pressed"]
[connection signal="pressed" from="MainScreen/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainScreen/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionsScreen/Back" to="." method="_on_back_pressed"]
